    minimum partition size in resize mode too. (LP: #960628)
  * Change ubiquity's virtual terminal to calling 'busybox tail' instead of
    'tail' to workaround the inotify on overlayfs bug.
  * panel: Only show icons, not labels, fixing our current "corruption"
    problem where the keyboard layout gets associated with another entry.
    (LP: #960039)

  [ Colin Watson ]
  * Make sure to load translations for "USB" and "CD" on the language page
    (LP: #958249).
  * Sort existing images in the face selector by filename.
  * Force face selector icon view to a two-column layout, in lieu of better
    geometry management (LP: #961025).
  * Refactor ubiquity.misc.grub_default to make it testable, and add tests
    for it.
  * Make test_misc pass when run on its own.  Apparently
    GdkX11.x11_get_default_xdisplay() segfaults if Gtk hasn't been imported
    (or possibly something finer-grained); so import Gtk from
    misc.set_indicator_keymaps even though we don't actually use it
    directly.

  [ Oliver Grawert ]
  * bin/oem-config-firstboot: do not reset debconf user data in automatic mode
  * ubiquity/plugins/ubi-tasks.py: run tasksel with --new-install option in
    automatic mode (this still doesnt make tasksel work, but at least skips
    the debconf question if tasksel isnt in the preseed file, to install
    packages late-command needs to be used atm.
  * bin/ubiquity: make debconf not re-show seen questions again in automatic mode
  * all the above fixes (LP: #924018), example boot.scr and preseed.cfg file are
    attached to the bug, thanks to colin for all the fixes and the hard work.

  [ Barry Warsaw ]
  * Do not offer to install the boot loader on device paths on which
    incompatible file systems will be installed (e.g. XFS).
    (LP: #959724)

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 21 Mar 2012 18:56:20 -0400

ubiquity (2.9.31) precise; urgency=low

  [ Colin Watson ]